--- a/app/src/main/res/layout/layout_countdown.xml
+++ b/app/src/main/res/layout/layout_countdown.xml
@@ -38,7 +38,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_below="@+id/countdown_days"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
         android:textSize="16sp"
@@ -50,7 +50,7 @@
         android:id="@+id/days_secondary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_below="@+id/countdown_days"
         android:layout_toEndOf="@+id/days_primary"
         android:layout_marginStart="4dp"
@@ -82,7 +82,7 @@
         android:id="@+id/hours_primary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_alignStart="@+id/countdown_hours"
         android:layout_below="@+id/countdown_hours"
         android:gravity="center"
@@ -96,7 +96,7 @@
         android:id="@+id/hours_secondary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_below="@+id/countdown_hours"
         android:layout_toEndOf="@+id/hours_primary"
         android:layout_marginStart="4dp"
@@ -129,7 +129,7 @@
         android:id="@+id/minutes_primary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_alignStart="@+id/countdown_minutes"
         android:layout_below="@+id/countdown_minutes"
         android:gravity="center"
@@ -143,7 +143,7 @@
         android:id="@+id/minutes_secondary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_below="@+id/countdown_minutes"
         android:layout_toEndOf="@+id/minutes_primary"
         android:layout_marginStart="4dp"
@@ -173,7 +173,7 @@
         android:id="@+id/seconds_primary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_alignStart="@+id/countdown_seconds"
         android:layout_below="@+id/countdown_seconds"
         android:gravity="center"
@@ -187,7 +187,7 @@
         android:id="@+id/seconds_secondary"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/round_countdown"
         android:layout_below="@+id/countdown_seconds"
         android:layout_toEndOf="@+id/seconds_primary"
         android:layout_marginStart="4dp"
