--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -6,4 +6,53 @@
     android:layout_height="match_parent"
     tools:context="org.eclipsesoundscapes.eclipsesoundscapes.activity.WalkthroughActivity">
 
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+    </android.support.v4.view.ViewPager>
+
+
+    <ImageButton
+        android:id="@+id/prev_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_chevron_left_white"
+        android:background="@android:color/transparent" />
+
+    <ImageButton
+        android:id="@+id/next_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_chevron_right_white"
+        android:background="@android:color/transparent" />
+
+    <Button
+        android:id="@+id/skip_close_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/next_button"
+        android:background="@android:color/transparent"
+        android:layout_alignParentEnd="true"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/colorAccent"
+        android:gravity="top|center_horizontal"
+        android:text="@string/walkthrough_skip_button"
+        android:textAllCaps="false"
+        android:layout_alignStart="@+id/next_button" />
+
 </RelativeLayout>
