--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,129 +1,65 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.eclipsesoundscapes.eclipsesoundscapes.fragments.EclipseCenterFragment"
-    android:background="@drawable/custom_background">
-
+    android:background="@android:color/black" >
 
     <RelativeLayout
+        android:id="@+id/rumble_map_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_height="0dp"
+        android:focusable="true"
+        android:clickable="true"
+        android:contentDescription="@string/rumble_map_inactive"
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/countdown_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="sans-serif-condensed"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:text="Countdown Until Eclipse"/>
-
-
-        <TextView
-            android:id="@+id/countdown_days"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/countdown_title"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="sans-serif-condensed"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:textAllCaps="true"
-            android:text="Days"/>
-
-
-
-
-        <LinearLayout
+        <ImageView
+            android:id="@+id/eclipse_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/countdown_title"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-
-
-            <TextView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:text="3"/>
-        </LinearLayout>
+            android:scaleType="fitXY"
+            android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@android:color/white"
+        />
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="16dp"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/button_close_rumble_map"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:textColor="@android:color/white"
+            android:text="@string/closeButton"
+            android:contentDescription="@string/closeButton"
+            android:layout_weight="1" />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/white" />
+
+        <Button
+            android:id="@+id/button_instructions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:textColor="@android:color/white"
+            android:text="@string/instructions_button"
+            android:contentDescription="@string/instructions_button"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+</LinearLayout>
