--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,11 +12,11 @@
         android:icon="@drawable/ic_nav_elcipse_features"
         android:title="@string/title_eclipse_features" />
 
-    <!--
+
     <item
         android:id="@+id/navigation_media"
         android:icon="@drawable/ic_media_center"
-        android:title="@string/title_media" /> -->
+        android:title="@string/title_media" />
 
     <item
         android:id="@+id/navigation_about"
