--- a/app/src/main/res/layout/fragment_rumble_map.xml
+++ b/app/src/main/res/layout/fragment_rumble_map.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_rumble_map"
+    android:background="@android:color/black"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:clickable="true"
@@ -11,7 +12,8 @@
     <ImageView
         android:id="@+id/contact_point_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:focusable="false"
