--- a/app/src/main/res/layout/fragment_rumble_map_interaction.xml
+++ b/app/src/main/res/layout/fragment_rumble_map_interaction.xml
@@ -15,9 +15,9 @@
 
         <ImageView
             android:id="@+id/eclipse_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:src="@drawable/eclipse_bailys_beads" />
 
     </RelativeLayout>
