--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -10,8 +10,10 @@
 
     <ImageView
         android:id="@+id/list_media_img"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/ma_list_item_edges_padding" />
 
@@ -30,6 +32,8 @@
         android:id="@+id/list_media_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@+id/list_media_img"
         android:layout_centerInParent="true"
