--- a/app/src/main/res/layout/fragment_media_player.xml
+++ b/app/src/main/res/layout/fragment_media_player.xml
@@ -15,9 +15,9 @@
 
         <ImageView
             android:id="@+id/eclipse_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:layout_width="300dp"
+            android:layout_height="169dp"
+            android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:src="@drawable/helmet_streamers"
             android:layout_centerInParent="true"/>
@@ -29,8 +29,7 @@
             android:background="@null"
             android:progressDrawable="@drawable/seekbar_progress"
             android:thumb="@drawable/seekbar_thumb"
-            android:layout_marginTop="16dp"
-            />
+            android:layout_marginTop="16dp" />
 
         <ImageButton
             android:id="@+id/play_button"
