--- a/app/src/main/res/layout/fragment_rumble_map.xml
+++ b/app/src/main/res/layout/fragment_rumble_map.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_rumble_map"
-    android:background="@android:color/black"
+    android:background="@drawable/custom_background"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:clickable="true"
@@ -20,6 +20,7 @@
         android:focusableInTouchMode="false"
         android:clickable="false"
         android:contentDescription="@string/rumble_map_launch"
+        android:src="@drawable/eclipse_first_contact"
         />
 
     <TextView
@@ -30,6 +31,7 @@
         android:fontFamily="sans-serif-"
         android:textSize="21sp"
         android:textStyle="bold"
+        android:alpha="0.7"
         android:importantForAccessibility="no"
         android:focusable="false"
         android:focusableInTouchMode="false"
