--- a/app/src/main/res/layout/fragment_rumble_map_interaction.xml
+++ b/app/src/main/res/layout/fragment_rumble_map_interaction.xml
@@ -15,8 +15,10 @@
 
         <ImageView
             android:id="@+id/eclipse_img"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
             android:layout_centerInParent="true"
             android:src="@drawable/eclipse_bailys_beads" />
 
