--- a/app/src/main/res/layout/layout_walkthrough_four.xml
+++ b/app/src/main/res/layout/layout_walkthrough_four.xml
@@ -34,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/bottom_view_title"
@@ -45,7 +46,8 @@
             android:fontFamily="sans-serif-condensed"
             android:text="@string/title_audio_descriptions"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:focusable="false"/>
 
         <TextView
             android:id="@+id/bottom_view_more"
@@ -58,7 +60,9 @@
             android:gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/walkthrough_audio_description"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:focusable="false"/>
+
     </LinearLayout>
 
 </RelativeLayout>
