--- a/app/src/main/res/layout/layout_walkthrough_one.xml
+++ b/app/src/main/res/layout/layout_walkthrough_one.xml
@@ -14,7 +14,9 @@
         android:src="@drawable/logo_2"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
-        android:layout_above="@+id/bottom_view"/>
+        android:layout_above="@+id/bottom_view"
+        android:importantForAccessibility="no"/>
+
 
     <TextView
         android:id="@+id/current_page"
@@ -27,14 +29,15 @@
         android:layout_alignEnd="@+id/walkthrough_img"
         android:layout_alignBottom="@+id/walkthrough_img"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="8dp" />
 
     <LinearLayout
         android:id="@+id/bottom_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/bottom_view_title"
@@ -45,7 +48,8 @@
             android:fontFamily="sans-serif-condensed"
             android:text="@string/walkthrough_welcome"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:focusable="false"/>
 
 
         <TextView
@@ -59,7 +63,8 @@
             android:gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/walkthrough_welcome_text"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:focusable="false"/>
     </LinearLayout>
 
 </RelativeLayout>
