--- a/app/src/main/res/layout/layout_walkthrough_three.xml
+++ b/app/src/main/res/layout/layout_walkthrough_three.xml
@@ -34,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/bottom_view_title"
@@ -45,7 +46,9 @@
             android:fontFamily="sans-serif-condensed"
             android:text="@string/title_eclipse_center"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:focusable="false"/>
+
 
         <TextView
             android:id="@+id/bottom_view_more"
@@ -58,7 +61,8 @@
             android:gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/walkthrough_welcome_text"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:focusable="false"/>
     </LinearLayout>
 
 </RelativeLayout>
