--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -145,7 +145,7 @@
                 android:id="@+id/eclipse_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true"
+                android:focusable="true"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/text_color_primary"
                 android:textSize="18sp"
