--- a/app/src/main/res/layout/activity_legal_license.xml
+++ b/app/src/main/res/layout/activity_legal_license.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/legal_soundscape_title"
+            android:text="@string/app_name"
             android:textSize="18sp"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
