--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -52,7 +52,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
-                android:text="How to Use The Rumble Map"
+                android:text="@string/rumble_map_how"
                 android:textSize="21sp"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
@@ -81,7 +81,7 @@
         android:layout_height="40dp"
         android:scaleType="centerCrop"
         android:background="@android:color/transparent"
-        android:contentDescription="back"
+        android:contentDescription="@string/back"
         android:layout_margin="16dp"
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/ic_chevron_left"
