--- a/app/src/main/res/layout/layout_walkthrough_five.xml
+++ b/app/src/main/res/layout/layout_walkthrough_five.xml
@@ -19,8 +19,6 @@
         android:text="@string/walkthrough_location_page"
         android:contentDescription="@string/walkthrough_title_access"
         android:focusable="true"
-
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -34,7 +32,6 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:importantForAccessibility="no"
-
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -52,8 +49,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -67,13 +62,12 @@
         android:drawableStart="@drawable/ic_map_marker"
         android:padding="16dp"
         android:textColor="@android:color/white"
-        android:text="Continue"
+        android:text="@string/continue_text"
         android:textStyle="bold"
         android:contentDescription="@string/location_permission"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-
         app:layout_constraintTop_toBottomOf="@+id/message" />
 
     <Button
@@ -89,9 +83,7 @@
         android:contentDescription="@string/walkthrough_ask_later"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-
         app:layout_constraintTop_toBottomOf="@+id/button_location" />
-
 
     <TextView
         android:id="@+id/current_page"
@@ -104,13 +96,9 @@
         android:textColor="@android:color/black"
         android:textSize="12sp"
         android:textStyle="bold"
-        android:text="Page 5 of 5"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-
         app:layout_constraintTop_toBottomOf="@+id/button_ask_later"
         app:layout_constraintRight_toRightOf="parent" />
-
-
 
 </android.support.constraint.ConstraintLayout>
