--- a/app/src/main/res/xml/pref_legal.xml
+++ b/app/src/main/res/xml/pref_legal.xml
@@ -3,7 +3,7 @@
     <Preference
         android:key="license_display"
         android:maxLines="1"
-        android:title="@string/pref_title_license" />
+        android:title="@string/license" />
 
     <Preference
         android:key="libraries_display"
@@ -11,6 +11,6 @@
 
     <Preference
         android:key="credits_display"
-        android:title="@string/pref_title_credit" />
+        android:title="@string/photo_credits" />
 
 </PreferenceScreen>
